--- a/www/index.html
+++ b/www/index.html
@@ -12,23 +12,31 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+    <script src="lib/auth0-lock/build/auth0-lock.js"></script>
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/angular-cookies/angular-cookies.js"></script>
+    <script src="lib/auth0-angular/build/auth0-angular.js"></script>
+    <script src="lib/a0-angular-storage/dist/angular-storage.js"></script>
+    <script src="lib/angular-jwt/dist/angular-jwt.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="js/auth0-variables.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="starter" animation="slide-left-right-ios7">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
+    <ion-nav-bar class="bar-stable nav-title-slide-ios7">
+      <ion-nav-back-button class="button-icon icon  ion-ios7-arrow-back">
+        Back
       </ion-nav-back-button>
     </ion-nav-bar>
     <!--
