--- a/www/login.html
+++ b/www/login.html
@@ -2,19 +2,24 @@
 <html>
   <head>
   <body>
-    <div class="bar bar-header bar-royal">
-      <h1 class="title">Hippo Login</h1>
-    </div>
 
-    <label class="email">
-       <span class="input1">Email</span>
-       <input type="email">
-    </label>
+  <div class="list">
 
-    <label class="password">
-      <span class="input2">Password</span>
-      <input type="password">
-    </label>
+      <label class="item item-input">
+        <span class="input-label">Username</span>
+        <input type="text">
+      </label>
+      
+      <label class="item item-input">
+        <span class="input-label">Password</span>
+        <input type="password">
+      </label>
+
+  </div>
+
+  <button class="button button-outline button-positive">
+     Submit
+  </button>
 
   </body>
 </html>
