--- a/platforms/ios/www/gallery.html
+++ b/platforms/ios/www/gallery.html
@@ -40,6 +40,11 @@
 				</div>
 				<div class="cardBuyInfo">
 					<p class="cardPrice">$9.95</p>
+					<span class="cardIncrement">
+						<button class="button icon ion-ios-plus-outline" onclick="decrement()"></button>
+						<div>9</div>
+						<button class="button icon ion-ios-plus-outline" onclick="increment()"></button>
+					</span>
 				</div>
 			</div>
 			<!-- card 2 -->
