--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-<<<<<<< HEAD
+	<head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 	<title></title>
@@ -23,58 +22,54 @@
 	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
 	<script src="js/services.js"></script>
-  </head>
-  <body ng-app="starter" class="platform-ios platform-cordova platform-webview">
-	<!--
-	  The nav bar that will be updated as we navigate between views.
-	-->
-	<ion-nav-bar class="bar-stable">
-	  <ion-nav-back-button>
-	  </ion-nav-back-button>
-	</ion-nav-bar>
-	<!--
-	  The views will be rendered in the <ion-nav-view> directive below
-	  Templates are in the /templates folder (but you could also
-	  have templates inline in this html file if you'd like).
-	-->
-	<ion-nav-view></ion-nav-view>
-=======
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+	</head>
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
-
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
-
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
-  </head>
-  <body ng-app="starter" class="platform-ios platform-cordova platform-webview">
-    <!--
-      The nav bar that will be updated as we navigate between views.
-    -->
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
-    </ion-nav-bar>
-    <!--
-      The views will be rendered in the <ion-nav-view> directive below
-      Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
-    -->
-    <ion-nav-view></ion-nav-view>
->>>>>>> 0444e9c558f702fa77d87865e5148fc6909c3dfe
-  </body>
+	<body ng-app="starter" class="platform-ios platform-cordova platform-webview">
+		<ion-scroll zooming="true" direction="xy" style="height: 5000px">
+			<div class="list card"> <!-- start card list -->
+				<!-- card 1 -->
+				<div class="card">
+					<div class="cardMainImage">
+						<img src="img/hippo.png">
+					</div>
+					<div class="cardTitle">
+						<img src="img/hippo.png" class="cardTitleIcon">
+						<h1>I'm a Fat Hippo</h1>
+						<p>Me too</p>
+						<p class="dietaryLifeStyle">Vegan</p>
+						<p class="dietaryLifeStyle">Paleo</p>
+					</div>
+					<div class="cardBuyInfo">
+						<p class="cardPrice">$9.95</p>
+						<div class="cardIncrement" ng-controller="quantityCtrl">
+							<button class="button icon ion-minus-circled" ng-click="increment(-1)"></button>
+							<span class="cardQuantity">{{quantity}}</span>
+							<button class="button icon ion-plus-circled" ng-click="increment(1)"></button>
+						</div>
+					</div>
+				</div>
+				<!-- card 2 -->
+				<div class="card">
+					<div class="cardMainImage">
+						<img src="img/hippo.png">
+					</div>
+					<div class="cardTitle">
+						<img src="img/hippo.png" class="cardTitleIcon">
+						<h1>I'm a Fat Hippo</h1>
+						<p>Me too</p>
+						<p class="dietaryLifeStyle">Vegan</p>
+						<p class="dietaryLifeStyle">Paleo</p>
+					</div>
+					<div class="cardBuyInfo">
+						<p class="cardPrice">$9.95</p>
+						<div class="cardIncrement" ng-controller="quantityCtrl">
+							<button class="button icon ion-minus-circled" ng-click="increment(-1)"></button>
+							<span class="cardQuantity">{{quantity}}</span>
+							<button class="button icon ion-plus-circled" ng-click="increment(1)"></button>
+						</div>
+					</div>
+				</div>
+			</div> <!-- end card list -->
+		</ion-scroll>
+	</body>
 </html>
