--- a/www/gallery.html
+++ b/www/gallery.html
@@ -27,7 +27,7 @@
 	<body ng-app="starter">
 		<div class="list card"> <!-- start card list -->
 			<!-- card 1 -->
-			<div>
+			<div class="card">
 				<div class="cardMainImage">
 					<img src="img/hippo.png">
 				</div>
@@ -48,6 +48,26 @@
 				</div>
 			</div>
 			<!-- card 2 -->
+			<div class="card">
+				<div class="cardMainImage">
+					<img src="img/hippo.png">
+				</div>
+				<div class="cardTitle">
+					<img src="img/hippo.png" class="cardTitleIcon">
+					<h1>I'm a Fat Hippo</h1>
+					<p>Me too</p>
+					<p class="dietaryLifeStyle">Vegan</p>
+					<p class="dietaryLifeStyle">Paleo</p>
+				</div>
+				<div class="cardBuyInfo">
+					<p class="cardPrice">$9.95</p>
+					<div class="cardIncrement" ng-controller="quantityCtrl">
+						<button class="button icon ion-minus-circled" ng-click="increment(-1)"></button>
+						<span class="cardQuantity">{{quantity}}</span>
+						<button class="button icon ion-plus-circled" ng-click="increment(1)"></button>
+					</div>
+				</div>
+			</div>
 		</div> <!-- end card list -->
 	</body>
 </html>
