--- a/www/login.html
+++ b/www/login.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <body background = "background photo login.jpg">
 
+  <label class="toggle">
+   <input type="checkbox">
+   <div class="track">
+     <div class="handle"></div>
+   </div>
+  </label>
+  <ul class="list">
+
+   <li class="item item-toggle">
+      HTML5
+      <label class="toggle toggle-assertive">
+        <input type="checkbox">
+        <div class="track">
+          <div class="handle"></div>
+         </div>
+      </label>
+    </li>
+
+   ...
+
+  </ul>
   <div class="list">
 
       <label class="item item-input">
@@ -20,6 +40,5 @@
   <button class="button button-outline button-positive">
      Submit
   </button>
-
-  </body>
+  </head>
 </html>
