--- a/www/login.html
+++ b/www/login.html
@@ -1,30 +1,102 @@
 <!DOCTYPE html>
 <html>
   <head>
+        <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <title></title>
 
-  <label class="toggle">
-   <input type="checkbox">
-   <div class="track">
-     <div class="handle"></div>
-   </div>
-  </label>
-  <ul class="list">
+    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
-   <li class="item item-toggle">
-      HTML5
-      <label class="toggle toggle-assertive">
-        <input type="checkbox">
-        <div class="track">
-          <div class="handle"></div>
-         </div>
-      </label>
-    </li>
+    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <link href="css/ionic.app.css" rel="stylesheet">
+    -->
+      <script src="lib/auth0-lock/build/auth0-lock.js"></script>
 
-   ...
 
-  </ul>
-  <div class="list">
+      <!-- ionic/angularjs js -->
+      <script src="lib/ionic/js/ionic.bundle.js"></script>
+      <script src="lib/angular-cookies/angular-cookies.js"></script>
 
+      <script src="lib/auth0-angular/build/auth0-angular.js"></script>
+      <script src="lib/a0-angular-storage/dist/angular-storage.js"></script>
+      <script src="lib/angular-jwt/dist/angular-jwt.js"></script>
+
+
+      <!-- cordova script (this will be a 404 during development) -->
+      <script src="cordova.js"></script>
+
+      <!-- your app's js -->
+      <script src="js/auth0-variables.js"></script>
+      <script src="js/app.js"></script>
+      <script src="js/controllers.js"></script>
+      <script src="js/services.js"></script>
+  </head>
+  <body>
+    <table>
+      <tr>
+        <td class="tableElt">
+          <label class="item item-radio">
+            <input type="checkbox" name="group">
+            <img src="img/Tags-Gluten.jpg">
+            <i class="radio-icon ion-checkmark"></i>
+          </label>
+        </td>
+        <td class="tableElt">
+          <label class="item item-radio">
+            <input type="checkbox" name="group">
+            <img src="img/Tags-Dairy.jpg">
+            <i class="radio-icon ion-checkmark"></i>
+          </label>
+        </td>
+      </tr>
+      <tr>
+        <td class="tableElt">
+          <label class="item item-radio">
+            <input type="checkbox" name="group">
+            <img src="img/Tags-Nut.jpg">
+            <i class="radio-icon ion-checkmark"></i>
+          </label>
+        </td>
+        <td class="tableElt">
+          <label class="item item-radio">
+            <input type="checkbox" name="group">
+            <img src="img/Tags-Veg.jpg">
+            <i class="radio-icon ion-checkmark"></i>
+          </label>
+      </tr>
+      <tr>
+        <td class="tableElt">
+          <label class="item item-radio">
+            <input type="checkbox" name="group">
+            <img src="img/Tags-Paleo.jpg">
+            <i class="radio-icon ion-checkmark"></i>
+          </label>
+        </td>
+        <td class="tableElt">
+          <label class="item item-radio">
+            <input type="checkbox" name="group">
+            <img src="img/Tags-Vegan.jpg">
+            <i class="radio-icon ion-checkmark"></i>
+          </label>
+      </tr>
+      <tr>
+        <td class="tableElt">
+          <label class="item item-radio">
+            <input type="checkbox" name="group">
+            <img src="img/Tags-Kosher.jpg">
+            <i class="radio-icon ion-checkmark"></i>
+          </label>
+        </td>
+        <td class="tableElt">
+          <label class="item item-radio">
+            <input type="checkbox" name="group">
+            <img src="img/Tags-Halal.jpg">
+            <i class="radio-icon ion-checkmark"></i>
+          </label>
+      </tr>
+    </table>
+    <div class="list">
       <label class="item item-input">
         <span class="input-label">Username</span>
         <input type="text">
@@ -36,9 +108,8 @@
       </label>
 
   </div>
-
   <button class="button button-outline button-positive">
      Submit
   </button>
-  </head>
+  </body>
 </html>
