--- a/www2/base.html
+++ b/www2/base.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hippo | {% block title %}{% endblock %}</title>
+    <title>Kitch | {% block title %}{% endblock %}</title>
     {% block head_css %}
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.1/css/foundation.min.css" rel="stylesheet" type="text/css">
     <link href='//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
-    <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
     <link href='css/app.css' rel='stylesheet' type='text/css'>
     {% endblock %}
     {% block head_js %}
