--- a/www2/homepage.html
+++ b/www2/homepage.html
@@ -12,12 +12,12 @@
 {% block header %}
   <div id="headerrow" class="row">
     <div class="column medium-8">
-      <h4>hippo</h4>
+      <img src="img/kitch-orange.png">
     </div>
     <div class="column medium-4">
-      <h6>
-        Made with <i class="fa fa-spoon"></i> in SF
-      </h6>
+      <p>
+        Already chill with us?
+      </p>
       <login-form></login-form>
     </div>
   </div>
@@ -25,9 +25,9 @@
 
 {% block content %}
   <div class="row">
-    <h2>
-      Who are you?
-    </h2>
+    <h4>
+      Let us get to know you
+    </h4>
   </div>
   <div class="row">
     <register-form></register-form>
