--- a/www2/menu.html
+++ b/www2/menu.html
@@ -12,12 +12,12 @@
 {% block header %}
   <div id="headerrow" class="row">
     <div class="column medium-8">
-      <h4>hippo</h4>
+      <img height="75" width="200" align="center" src="img/kitch-main.png">
     </div>
     <div class="column medium-4">
-      <h6>
+      <p>
         Made with <i class="fa fa-spoon"></i> in SF
-      </h6>
+      </p>
     </div>
   </div>
 {% endblock %}
